--- a/environment.yml
+++ b/environment.yml
@@ -3,68 +3,100 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - backcall=0.1.0=py38_0
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py38_0
-  - decorator=4.4.1=py_0
+  - backcall=0.2.0=py_0
+  - blas=1.0=mkl
+  - ca-certificates=2020.6.24=0
+  - certifi=2020.6.20=py38_0
+  - dbus=1.13.16=hb2f20db_0
+  - decorator=4.4.2=py_0
+  - expat=2.2.9=he6710b0_2
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.10.2=h5ab3b9f_0
+  - glib=2.65.0=h3eb4bd4_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
+  - icu=58.2=he6710b0_3
+  - intel-openmp=2020.1=217
   - ipykernel=5.1.4=py38h39e3cac_0
-  - ipython=7.12.0=py38h5ca1d4c_0
+  - ipython=7.16.1=py38h5ca1d4c_0
   - ipython_genutils=0.2.0=py38_0
-  - jedi=0.16.0=py38_0
-  - jupyter_client=5.3.4=py38_0
-  - jupyter_core=4.6.1=py38_0
+  - jedi=0.17.1=py38_0
+  - jpeg=9b=h024ee3a_2
+  - jupyter_client=6.1.6=py_0
+  - jupyter_core=4.6.3=py38_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libsodium=1.0.16=h1bed415_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1d=h7b6447c_4
-  - parso=0.6.1=py_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.10=he19cac6_1
+  - matplotlib=3.2.2=0
+  - matplotlib-base=3.2.2=py38hef1b27d_0
+  - mkl=2020.1=217
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.1.0=py38h23d657b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
+  - ncurses=6.2=he6710b0_1
+  - numpy-base=1.18.5=py38hde5b4d6_0
+  - openssl=1.1.1g=h7b6447c_0
+  - parso=0.7.0=py_0
+  - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=py38_0
   - pickleshare=0.7.5=py38_1000
   - pip=20.0.2=py38_1
-  - prompt_toolkit=3.0.3=py_0
-  - pygments=2.5.2=py_0
-  - python=3.8.1=h0371630_1
+  - prompt-toolkit=3.0.5=py_0
+  - pygments=2.6.1=py_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - python=3.8.3=hcff3b4d_2
   - python-dateutil=2.8.1=py_0
-  - readline=7.0=h7b6447c_5
-  - setuptools=45.2.0=py38_0
-  - six=1.14.0=py38_0
-  - sqlite=3.31.1=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.3=py38h7b6447c_3
+  - pytz=2020.1=py_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.0=h7b6447c_0
+  - scipy=1.5.0=py38h0b6359f_0
+  - seaborn=0.10.1=py_0
+  - setuptools=49.2.0=py38_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py_0
+  - sqlite=3.32.3=h62c20be_0
+  - statsmodels=0.11.0=py38h7b6447c_0
+  - tk=8.6.10=hbc83047_0
+  - tornado=6.0.4=py38h7b6447c_1
   - traitlets=4.3.3=py38_0
-  - wcwidth=0.1.8=py_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.34.2=py38_0
-  - xz=5.2.4=h14c3975_4
-  - zeromq=4.3.1=he6710b0_3
+  - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.2=he6710b0_2
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - bids-validator==1.4.2
     - bleach==3.1.0
+    - chardet==3.0.4
     - cycler==0.10.0
     - defusedxml==0.6.0
     - docopt==0.6.2
     - entrypoints==0.3
+    - idna==2.10
     - ipython-genutils==0.2.0
     - jinja2==2.11.1
     - joblib==0.14.1
     - json5==0.9.1
     - jsonschema==3.2.0
     - jupyter-core==4.6.2
-    - jupyterlab==1.2.6
-    - jupyterlab-server==1.0.6
+    - jupyterlab==2.2.0
+    - jupyterlab-server==1.2.0
     - kiwisolver==1.1.0
     - markupsafe==1.1.1
-    - matplotlib==3.1.3
     - mistune==0.8.4
     - nbconvert==5.6.1
     - nbformat==5.0.4
     - nibabel==3.0.1
-    - nilearn==0.6.1
-    - nistats==0.0.1b1
+    - nilearn==0.6.2
+    - nistats==0.0.1rc0
     - notebook==6.0.3
     - num2words==0.5.10
     - numpy==1.18.1
@@ -76,15 +108,15 @@ dependencies:
     - pybids==0.10.0
     - pyparsing==2.4.6
     - pyrsistent==0.15.7
-    - pytz==2019.3
     - pyzmq==18.1.1
+    - requests==2.24.0
     - scikit-learn==0.22.1
-    - scipy==1.4.1
     - send2trash==1.5.0
     - sklearn==0.0
     - sqlalchemy==1.3.13
     - terminado==0.8.3
     - testpath==0.4.4
+    - urllib3==1.25.10
     - webencodings==0.5.1
 prefix: /home/kmb/anaconda3/envs/decidenet
 
